--- a/edit/package.json
+++ b/edit/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3006",
     "lint": "next lint"
   },
   "dependencies": {
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-iframe": "^1.8.5",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
